# uav-ugv

./: Installation.md  README.md
InterIIT_DRDO/interiit22/: CMakeLists.txt  package.xml
InterIIT_DRDO/interiit22/launch/: drdo_test_1.launch  drdo_world1.launch  drdo_world1_cam.launch  drdo_world2.launch  drdo_world3.launch  mavros_node.launch
InterIIT_DRDO/interiit22/models/drone_with_depth_camera/: model.config  model.sdf
InterIIT_DRDO/interiit22/models/gimbal_small_2d/: model.sdf
InterIIT_DRDO/interiit22/models/iris_base/: model.sdf
InterIIT_DRDO/interiit22/models/world1/: model.config  model.sdf
InterIIT_DRDO/interiit22/models/world2/: model.config  model.sdf
InterIIT_DRDO/interiit22/models/world2/meshes/: terrain_raster2.dae
InterIIT_DRDO/interiit22/models/world3/: model.config  model.sdf
InterIIT_DRDO/interiit22/models/world3/meshes/: EXPORT_GOOGLE_SAT_WM.tif
InterIIT_DRDO/interiit22/scripts/: Helpers.py  arm_uav.py  control_uav.py  detect_roads.py  keyop_prius.py  listen_uav.py  navigate_ugv.py  string_generator.py  takeoff.py
InterIIT_DRDO/interiit22/world/: drdo_world1.world  drdo_world1_cam.world  drdo_world1ardu_cam.world  drdo_world2.world  drdo_world3.world
InterIIT_DRDO/prius_description/urdf/: prius.urdf
iq_gnc/: CMakeLists.txt
iq_gnc/src/: drdo_test.cpp
iq_sim/models/drone_with_camera/: model_original.sdf
